--- a/src/LoginPage/login.css
+++ b/src/LoginPage/login.css
@@ -1,16 +1,113 @@
 .login {
   height: 100vh;
   width: 100vw;
-  background-color: #2e3034;
+  background-color: #3e4247;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.login_logo {
+  position: absolute;
+  font-family: "lobster";
+  color: #1c1e21;
+  top: 40px;
+  left: 40px;
+  z-index: 10;
+}
+
+.login__box {
+  background-color: #36393f;
+  width: 500px;
+  height: 328px;
+  border: 2px solid #2e3034;
+
+  border-radius: 20px;
+  position: absolute;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.login__box {
+.login__box > h1 {
+  font-size: 30px;
+  text-align: center;
+  font-family: "Lobster";
+  color: #1c1e21;
+}
+.login__box > p {
+  font-size: 17px;
+  text-align: center;
+  font-family: "Lobster";
+  color: #1c1e21;
+}
+.box_in {
+  height: 50%;
+  width: 70%;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  position: relative;
+  margin-left: 12px;
+}
+.box-button {
+  position: absolute;
+  right: 0;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
   background-color: #36393f;
-  width: 500px;
-  height: 250px;
-  border: 2px solid #2e3034;
-  box-shadow: 10px 10px 1px 0px #404247;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.box-button > button {
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  background-color: #1c1e21;
+  border: none;
+  color: white;
+  outline: none;
+  cursor: pointer;
+}
+
+.box-input {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  background-color: #1c1e21;
+  padding: 20px;
+  margin-right: 21px;
+  height: 44px;
+  border-radius: 12px;
+}
+.box-input > hr {
+  border: 1px solid #42474c;
+  width: 100%;
+  height: 0px;
+  background-color: #42474c;
+}
+.box-input > input {
+  border: none;
+  background-color: transparent;
+  padding: 10px;
+  width: 93px;
+  color: #51575e;
+  outline: none;
+}
+.box-input > input::placeholder {
+  color: #42474c;
+  font-family: "Lobster";
+}
+.box_icon {
+  margin-left: 4px;
+  margin-top: 2px;
+  width: 1.4rem;
+  height: 1.4rem;
+  color: #42474c;
 }
