--- a/src/Component/servers.css
+++ b/src/Component/servers.css
@@ -1,7 +1,10 @@
 .servers {
-  display: flex;
-  flex: 1;
+  display: none;
   max-height: 100vh;
+  opacity: 0;
+}
+.main_server {
+  flex: 1;
 }
 a {
   width: 100%;
